--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
        <div class="callendar"></div>
     
         <div class="euroRates">
-            <span>Aktualny kurs Euro</span> 4,71PLN
+            <span>Aktualny kurs Euro <div class="rate">4,71PLN</div></span>
         </div>
     </div>
 
